--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="2.jpg" style="border-radius:100px;" />
     <h1 style="color: coral;">Best Daddy</h1>
     <img src="3.jpg" style="border-radius:100px;" />
-    <h1 style="color: coral;">Naughty daddy</h1>
+    <h1 style="color: coral;">Cute daddy</h1>
     <img src="4.jpg" style="border-radius:100px;" />
     <h1 style="color: coral;">Obedient Son</h1>
 
